# black_hole_wasm_rust

./: .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/blackhole/: page.tsx
app/lib/: basePath.ts
jfiles/src/: build.just  run.just
server/: Cargo.toml
wasm/: .clippy.toml  Cargo.toml
wasm/src/: camera.rs  integrator.rs  lib.rs  physics.rs  shader.wgsl
